syntax = 'proto3';
option go_package = "video3/proto";
package main;

service Todos {
  rpc GetOne(GetOneRequest) returns (Todo);
  rpc GetMany(GetManyRequest) returns (GetManyResponse);
  rpc CreateOne(CreateOneRequest) returns (Todo);
  rpc UpdateOne(UpdateOneRequest) returns (Todo);
  rpc DeleteOne(GetOneRequest) returns (DeleteOneResponse);
}

message Todo {
  int32 id = 1;
  string title = 2;
  bool completed = 3;
}

message GetManyResponse {
  repeated Todo todos = 1;
}

message GetOneRequest {
  int32 id = 1;
}

message GetManyRequest {}

message CreateOneRequest {
  string title = 1;
}

message UpdateOneRequest {
  int32 id = 1;
  string title = 2;
  bool completed = 3;
}

message DeleteOneResponse {
  string message = 1;
}


